# skills-as-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
skills/code-review/: SKILL.md  tools.py
skills/code-review/scripts/: analyze_complexity.py  check_style.py
skills/hello-world/: SKILL.md
src/skills_as_mcp/: __init__.py  config.py  server.py
src/skills_as_mcp/core/: __init__.py  loader.py  models.py  registry.py
src/skills_as_mcp/mcp/: __init__.py  bridge.py  prompts.py
tests/: test_loader.py  test_registry.py  test_tools.py
